--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,12 @@
 #gameboard {
   overflow: hidden ;
+  border: 1px solid white ;
+}
+body {
+  background-color: black ;
+}
+button {
+  background-color: black ;
+  border: 1px solid white ;
+  color: white ;
 }
