--- a/styles/main.css
+++ b/styles/main.css
@@ -23,3 +23,14 @@ button {
   display: block ;
   padding-right: 100px ;
 }
+.cent-cont {
+  width: 100% ;
+  height: 100% ;
+  display: table ;
+}
+.cent {
+  text-align: center ;
+  font-size: 32px ;
+  vertical-align: middle ;
+  display: table-cell ; 
+}
