Improved despawn system
Previously things would despawn if they touched the 0 edges, now it should be when they are off screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
   position: relative ;
 }
 body {
+  user-select: none ;
   background-color: black ;
   color: white ;
   font-family: 'Press Start 2P', cursive;
