--- a/styles/main.css
+++ b/styles/main.css
@@ -3,13 +3,18 @@
 }
 #board {
   border: 1px solid white ;
+  box-sizing: border-box ;
   position: relative ;
+  width: 100% ;
+  height: 100% ;
 }
-body {
+html, body {
   user-select: none ;
   background-color: black ;
   color: white ;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', cursive ;
+  height: 98% ;
+  margin: 4px ;
 }
 button {
   background-color: black ;
